[package]
name = "et"
version = "0.0.2"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"
description = "🌶 het hottest way to store data on the web."
keywords = ["database", "storage", "sqlite", "nosql", "json"]
homepage = "https://github.com/yuulive"
repository = "https://github.com/yuulive/et"
readme = "README.md"
license = "MIT"

[dependencies]
# rusqlite = "0.21.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "serde_json"]

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "z"
